[gd_scene load_steps=5 format=3 uid="uid://cmtktewudqo4h"]

[ext_resource type="Texture2D" uid="uid://comi54dwhmwok" path="res://assets/escenarios/menu_background.jpg" id="1_3l8f0"]
[ext_resource type="Script" path="res://scripts/mainmenu/main_menu.gd" id="1_pl5kw"]

[sub_resource type="SystemFont" id="SystemFont_h6kv5"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_xgm2m"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pl5kw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3l8f0")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.341176, 0.584314, 0.47451)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_h6kv5")
theme_override_font_sizes/font_size = 64
text = "DEEP DIVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Play_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xgm2m")
theme_override_font_sizes/font_size = 24
text = "PLAY"

[node name="Load_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xgm2m")
theme_override_font_sizes/font_size = 24
text = "LOAD"

[node name="Leaderboard_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xgm2m")
theme_override_font_sizes/font_size = 24
text = "LEADERBOARD"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xgm2m")
theme_override_font_sizes/font_size = 24
text = "EXIT"
